--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
       <div class="card">
         <h2 class="card-title">Supervisor</h2>
         <p class="card-description">Monitors activity to identify project roadblocks</p>
-        <img src="images/icon-supervisor.svg" alt="Blue Magnifying Glass" class="card-image">
+        <img src="images/icon-supervisor.svg" class="card-image">
       </div>
       <div class="card">
         <h2 class="card-title">Team Builder</h2>
         <p class="card-description">Scans our talent network to create the optimal team for your project</p>
-        <img src="images/icon-team-builder.svg" alt="Red House in front of a website" class="card-image">
+        <img src="images/icon-team-builder.svg" class="card-image">
       </div>
       <div class="card">
         <h2 class="card-title">Karma</h2>
         <p class="card-description">Regularly evaluates our talent to ensure quality</p>
-        <img src="images/icon-karma.svg" alt="Yellow Light Bulb" class="card-image">
+        <img src="images/icon-karma.svg" class="card-image">
       </div>
       <div class="card">
         <h2 class="card-title">Calculator</h2>
         <p class="card-description">Uses data from past projects to provide better delivery estimates</p>
-        <img src="images/icon-calculator.svg" alt="Silver Computer Monitor" class="card-image">
+        <img src="images/icon-calculator.svg" class="card-image">
       </div>
     </div>
   </main>
