--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <div class="title-section">
-      <h2 class="title">Reliable, efficient delivery<br><strong>Powered by Technology</strong></h2>
+      <h2 class="title">Reliable, efficient delivery <strong>Powered by Technology</strong></h2>
       <p class="main-description">Our Artificial Intelligence powered tools use millions of project data points 
         to ensure that your project is successful
       </p>
